# wgpu-practice

./: README.md
learn-wgpu/: README.md
learn-wgpu/01-swapchain/: Cargo.toml
learn-wgpu/01-swapchain/src/: challenge.rs
learn-wgpu/02-pipeline/: Cargo.toml
learn-wgpu/02-pipeline/src/: challenge.rs  challenge_shader.wgsl  main.rs
learn-wgpu/03-buffers/: Cargo.toml
learn-wgpu/03-buffers/src/: challenge.rs  main.rs
learn-wgpu/04-textures/: Cargo.toml
learn-wgpu/04-textures/src/: challenge.rs  main.rs  shader.wgsl  texture.rs
learn-wgpu/05-uniform/: Cargo.toml
learn-wgpu/05-uniform/src/: challenge.rs  main.rs  shader.wgsl
learn-wgpu/06-instancing/: Cargo.toml
learn-wgpu/06-instancing/src/: challenge.rs  main.rs  shader.wgsl
learn-wgpu/07-depth/: Cargo.toml
learn-wgpu/07-depth/src/: challenge.rs  challenge_shader.wgsl  main.rs  shader.wgsl  texture.rs
learn-wgpu/08-model/: Cargo.toml
learn-wgpu/08-model/src/: main.rs  model.rs  texture.rs
