[package]
name = "buffers"
version = "0.1.0"
authors = ["tellnnn <tellurium3262@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.8"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "challenge"
path = "src/challenge.rs"